Closed Bug 881358 Opened 11 years ago Closed 11 years ago

Kill build warnings in XPConnect

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: Ms2ger, Assigned: Ms2ger)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch Patch v1Splinter Review
      No description provided.
Attachment #760484 - Flags: review?(bobbyholley+bmo)
Comment on attachment 760484 [details] [diff] [review]
Patch v1

Review of attachment 760484 [details] [diff] [review]:
-----------------------------------------------------------------

::: js/xpconnect/loader/Makefile.in
@@ +8,5 @@
>  VPATH		= @srcdir@
>  
>  include $(DEPTH)/config/autoconf.mk
>  
> +FAIL_ON_WARNINGS := 1

If this gets annoying I may turn it off, but I'm willing to give it a try.
Attachment #760484 - Flags: review?(bobbyholley+bmo) → review+
er, wrong bug. Ignore comment 2.
https://hg.mozilla.org/mozilla-central/rev/b8d033f67ca3
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: