Bug 881358 - Kill build warnings in XPConnect; r=bholley